added further notes

--- a/paper/tex/geschichtliches/adeline/adeline.tex
+++ b/paper/tex/geschichtliches/adeline/adeline.tex
@@ -36,7 +36,7 @@ Werfen wir einen Blick auf die Abbildung \ref{fig:ad_gd1}.
 	\label{fig:ad_gd1}
 \end{figure}
 
-Die dargestellte Funktion besitzt nur einen Eingabewert. Zur Veranschaulichung kann man sich einen Ball vorstellen, der einen Berg bzw. in ein Tal herunter rollt. Bezogen auf das Beispiel betrachtet man einen einen beliebigen Funktionswert und bestimmt die Ableitung an dieser Stelle. Diese Ableitung kann auch als \glqq Steigung\grqq  an der betrachteten Stelle verstanden werden. Wenn man diese nun invertiert hat, bekommt man theoretisch die \glqq Richtung\grqq  in die der Ball rollen müsste. Ähnlich wie schon der Lernalgorithmus beim Perceptron, wird mit einer Lernrate ${\eta}$ gearbeitet, die bestimmt wie viel Veränderung in einem Iterations-Schritt stattfinden soll. Im Beispiel könnte man diese als Schrittweite verstehen. 
+Die dargestellte Funktion besitzt nur einen Eingabewert. Zur Veranschaulichung kann man sich einen Ball vorstellen, der einen Berg bzw. in ein Tal herunter rollt. Bezogen auf das Beispiel betrachtet man einen einen beliebigen Funktionswert und bestimmt die Ableitung an dieser Stelle. Diese Ableitung kann auch als \glqq Steigung''  an der betrachteten Stelle verstanden werden. Wenn man diese nun invertiert hat, bekommt man theoretisch die \glqq Richtung''  in die der Ball rollen müsste. Ähnlich wie schon der Lernalgorithmus beim Perceptron, wird mit einer Lernrate ${\eta}$ gearbeitet, die bestimmt wie viel Veränderung in einem Iterations-Schritt stattfinden soll. Im Beispiel könnte man diese als Schrittweite verstehen. 
 Wie weit in einem Schritt gearbeitet wird, ist von fundamentaler Bedeutung. In Abbildung \ref{fig:ad_gd2} ist zu sehen, dass es problematisch sein kann die Lernrate zu hoch zu definieren, denn der Algorithmus kann das Minimum auch überspringen. Andererseits kann es auch zu Problemen kommen wenn die Lernrate zu klein definiert wurde, da der Algorithmus eventuell in einem lokalen Minimum \glqq steckenbleibt\grqq . Um gerade das erste Problem zu beheben wird die Lernrate heutzutage in jedem Iterationsschritt in Abhängigkeit der Größe der Steigung berechnet.
 
 \begin{figure}[!htb]
@@ -90,7 +90,7 @@ Da es sich im Beispiel um einen mehrdimensionalen Eingabevektor handelt, muss ma
 \FloatBarrier
 \footnotetext{Mit Geogebra 3d erstellt: \url{https://www.geogebra.org/3d}}
 
-Wann man nun einen Punkt auf der Oberfläche der Funktion betrachtet ist es nicht möglich zu sagen wie stark die Steigung ist, denn es fehlt eine Richtung bezüglich der \glqq geschaut\grqq  werden soll. Hierzu betrachten wir noch einmal die Abbildung \ref{fig:partAbl2}. Hier wurde eine \glqq rote Ebene \glqq eingeführt. Dies kann als \emph{Blickwinkel} angesehen werden. Wenn man nun einen Punkt auf dieser Schnittgerade betrachtet ist es möglich die zugehörigen Steigung zu ermitteln. Um die Ebene in der betrachteten Abbildung zu erzeugen wird einfach eine der beiden Eingabeparameter auf einen Wert festgelegt (in diesem Fall ${y=1}$). Man kann natürlich auch den Wert für den Eingabeparameter \emph{x} festlegen und \emph{y} als Laufvariable betrachten. 
+Wann man nun einen Punkt auf der Oberfläche der Funktion betrachtet ist es nicht möglich zu sagen wie stark die Steigung ist, denn es fehlt eine Richtung bezüglich der \glqq geschaut''  werden soll. Hierzu betrachten wir noch einmal die Abbildung \ref{fig:partAbl2}. Hier wurde eine \glqq rote Ebene'' eingeführt. Dies kann als \emph{Blickwinkel} angesehen werden. Wenn man nun einen Punkt auf dieser Schnittgerade betrachtet ist es möglich die zugehörigen Steigung zu ermitteln. Um die Ebene in der betrachteten Abbildung zu erzeugen wird einfach eine der beiden Eingabeparameter auf einen Wert festgelegt (in diesem Fall ${y=1}$). Man kann natürlich auch den Wert für den Eingabeparameter \emph{x} festlegen und \emph{y} als Laufvariable betrachten. 
 
 Dieser Prozess des Aufteilens der Ableitungen in die einzelnen Teile wird als \emph{Partiale Ableitung} bezeichnet. Wir nehmen eine Funktion mit mehrdimensionalem Eingabevektor und berechnen für jede Komponente des Vektors die Ableitung. Kurze Anmerkung zur Notation: Im Zähler des Bruchs welcher die Partielle Ableitung angibt steht stets die Funktion welche abgeleitet werden soll, während man im Nenner die Variable bezüglich der abgeleitet werden soll notiert.
 
@@ -197,7 +197,7 @@ Die einzelnen Komponenten des Gradientenvektors können dann wieder mit der alle
 Die wesentlichen Unterschiede zum Lernalgorithmus, welcher beim Perceptron verwendet wird, bestehen daraus, dass der Ausgabewert bei diesem Modell mit einer reellen Zahl dargestellt wird. Außerdem wird für das Aktualisieren eines Gewichts die komplette Menge an Trainingsdatensätzen verwendet. Deswegen wird diese Herangehensweise auch \emph{Batch-Gradientenabstieg} genannt. Beim Perceptron wird das Gewicht nach jedem einzelnen Trainingsdatensatz gerichtet. Eine Implementierung dieses Algorithmus befindet sich ebenfalls in dem Github Repository \cite{pcImplementierung}. 
 
 \paragraph{Stochastischer Gradientenabstieg} \label{par:stochGA}
-Der vorgestellte Algorithmus ist in der Praxis aber relativ rechenaufwendig weil man für jeden einzelnen Iterationsschritt alle Trainingsdatensätze betrachten muss. Ein Weg dies zu umgehen ist der sogenannte \emph{Mini-Batch Gradientenabstieg}. Hierbei wird die komplette Menge an Traininngsdatensätzen erst einmal gemischt und anschließend in kleinere Mengen unterteilt. Beim Iterationsschritt wird dann jeweils eine solcher Mengen betrachtet. Dies ist nicht der effizienteste Weg allerdings ist dieser viel schneller berechnet, dennoch gibt er eine gute Annäherung dafür wie die einzelnen Gewichte geändert werden müssen. In Abbildung \ref{fig:ad_gd4} kann man erkennen wie die unterschiedlichen Arten des Gradientenabstiegs grob arbeiten. Der linke Graph beschreibt den \glqq herkömmlichenlichen\grqq  Batch-Gradientenabstieg während der rechte den stochastischen darstellt. Dieser trifft zwar nie die genau Richtung ist allerdings immer relativ nah dran und findet letztendlich ebenfalls das Ziel. 
+Der vorgestellte Algorithmus ist in der Praxis aber relativ rechenaufwendig weil man für jeden einzelnen Iterationsschritt alle Trainingsdatensätze betrachten muss. Ein Weg dies zu umgehen ist der sogenannte \emph{Mini-Batch Gradientenabstieg}. Hierbei wird die komplette Menge an Traininngsdatensätzen erst einmal gemischt und anschließend in kleinere Mengen unterteilt. Beim Iterationsschritt wird dann jeweils eine solcher Mengen betrachtet. Dies ist nicht der effizienteste Weg allerdings ist dieser viel schneller berechnet, dennoch gibt er eine gute Annäherung dafür wie die einzelnen Gewichte geändert werden müssen. In Abbildung \ref{fig:ad_gd4} kann man erkennen wie die unterschiedlichen Arten des Gradientenabstiegs grob arbeiten. Der linke Graph beschreibt den \glqq herkömmlichenlichen'' Batch-Gradientenabstieg während der rechte den stochastischen darstellt. Dieser trifft zwar nie die genau Richtung ist allerdings immer relativ nah dran und findet letztendlich ebenfalls das Ziel. 
 
 \begin{figure}[!htb]
 	\centering
