--- a/slides/tex/aktuelleEntwicklung/aktuelles_sec.tex
+++ b/slides/tex/aktuelleEntwicklung/aktuelles_sec.tex
@@ -1,5 +1,5 @@
 \section{Aktuelle Entwicklung}
 
-\input{aktuelleEntwicklung/backpropagation/backpropagation}
-\input{aktuelleEntwicklung/multilayerPerceptron/multilayerPerceptron}
-\input{aktuelleEntwicklung/recurrentNN/recurrentNN}
+\input{aktuelleEntwicklung/convolutionalNN/convolutionalNN}
+%\input{aktuelleEntwicklung/backpropagation/backpropagation}
+
