--- a/slides/tex/geschichtliches/perceptron/perceptron.tex
+++ b/slides/tex/geschichtliches/perceptron/perceptron.tex
@@ -8,7 +8,7 @@
 \column{0.45\textwidth}
 \begin{itemize}
 \item Ähnliche Aktivierungsfunktion wie beim MP-Neuron
-\item Jedoch gewichtete kontinuierliche Eingabewerte
+\item Jedoch gewichtete Eingabewerte
 \end{itemize}
 
 
