--- a/slides/tex/slides_main.tex
+++ b/slides/tex/slides_main.tex
@@ -88,13 +88,6 @@ $
 
 \maketitle
 
-\begin{frame}[standout]
-
-
-{\normalsize Alle Meterialen sind unter folgender URL zu finden: \\ \url{https://github.com/derMacon/deeplearning_seminar}}
-\end{frame}
-
-
 \appendix
 
 \begin{frame}[fragile]{Backup slides}
@@ -106,6 +99,14 @@ $
 
   \themename will automatically turn off slide numbering and progress bars for
   slides in the appendix.
+\end{frame}
+
+\input{zusatz/zusatz_part}
+
+\begin{frame}[standout]
+
+
+{\normalsize Alle Meterialen sind unter folgender URL zu finden: \\ \url{https://github.com/derMacon/deeplearning_seminar}}
 \end{frame}
 
 \begin{frame}[allowframebreaks]{References}
