--- a/slides/tex/aktuelleEntwicklung/convolutionalNN/convolutionalNN.tex
+++ b/slides/tex/aktuelleEntwicklung/convolutionalNN/convolutionalNN.tex
@@ -9,12 +9,18 @@
 
 
 \note[item]{1962: zwei Neurophysiologen Torsten Wiesel und David Hubel}
-\note[item]{Konzept der simple und complex cells}
 
-\note[item]{nicht positionsbunden - spatial invariance, räumliche Invarianz}
-\note[item]{Arten von Zellen zur Erkennung einfacher Kanten und Balken}
-\note[item]{\emph{simple cells}: ist Positionsgebunden}
-\note[item]{\emph{complex cells}: Muster können an beliebigen Positionen auftauchen}
+\note[item]{Konzept der simple und complex cells
+\begin{itemize}
+    \item nicht positionsbunden - spatial invariance, räumliche Invarianz
+\end{itemize}}
+
+\note[item]{Arten von Zellen zur Erkennung einfacher Kanten und Balken
+\begin{itemize}
+    \item \emph{simple cells}: ist Positionsgebunden
+    \item \emph{complex cells}: Muster können an beliebigen Positionen auftauchen
+\end{itemize}}
+
 \note[item]{1962: Konzept wie im Bild}
 \note[item]{1980er Dr. Kunihiko Fukushima: erstes Modell nach diesem Konzept}
 
@@ -40,6 +46,14 @@
 
 \note[item]{Pioniere, fr. Informatiker Yann LeCun}
 \note[item]{Bekannteste Ausarbeitung über CNN für Handschriften}
+\note[item]{\emph{Verwendung von MNIST database of handwritten digits}
+\begin{itemize}
+	\item 60.000 Trainingsdatensätze
+	\item 10.000 zum Berechnen des Fehlers
+    \item unterschiedliche Personen für Trainings- und Evaluierungsdatensätze
+\end{itemize}}
+
+\note[item]{soll erkennen ob ein Bild zu einer (oder mehreren) bestimmten Klasse(n) gehört}
 
 \end{frame}
 
@@ -56,7 +70,22 @@
 	\includegraphics[width=.8\linewidth]{./aktuelleEntwicklung/convolutionalNN/img/cnn_convLayer_alpha}
 \end{figure}
 
-\note[item]{Farbwertearray kann pro Pixel mehrere Werte enthalten}
+
+\note[item]{Array als Eingabe
+\begin{itemize}
+    \item Repräsentiert die Pixel im Bild
+\end{itemize}}
+
+\note[item]{Farbwertearray kann pro Pixel mehrere Werte enthalten
+\begin{itemize}
+    \item entsprechend eventuell auch mehrere Dimensionen im Array
+\end{itemize}}
+
+%k\note[item]{Ein Covolutional NN besteht im wesentlichen 
+%k\note[item]{
+%k\note[item]{
+%k\note[item]{
+
 \end{frame}
 
 
