--- a/slides/tex/zusatz/multilayerPerceptron/multilayerPerceptron.tex
+++ b/slides/tex/zusatz/multilayerPerceptron/multilayerPerceptron.tex
@@ -36,13 +36,24 @@ Anwendungsbereiche:
 \end{columns}
 
 \note[item]{vielfältige Struktur}
-\note[item]{Mehrschichtiges Netz, bereits beim BPAlgo. verwendet}
-\note[item]{Zu tiefe Netz: Probleme beim Training}
-\note[item]{Techniken unter Deep learning zusammengefasst}
+\note[item]{Mehrschichtiges Netz, bereits beim Backpropagationalgorithmus verwendet}
+\note[item]{Zu tiefe Netz: Probleme beim Training
+\begin{itemize}
+    \item Techniken unter Deep learning zusammengefasst
+\end{itemize}}
+
 \note[item]{Stuktur: mehrschichtiges forwärtsgekoppeltes Netz}
 \note[item]{Feedforward: durchiterieren von Eingabewerten}
-\note[item]{}
-\note[item]{}
+\note[item]{Anwendungsbereiche
+\begin{itemize}
+    \item Mustererkennung 
+    \item Funktionenapproximation
+    \item Klassifizierung
+    \item Prognose
+    \item Diagnose
+    \item Steuerung 
+    \item Optimierung
+\end{itemize}}
 
 \end{frame}
 
