--- a/slides/tex/zusatz/recurrentNN/recurrentNN.tex
+++ b/slides/tex/zusatz/recurrentNN/recurrentNN.tex
@@ -30,7 +30,20 @@
 
 \end{columns}
 
-\note[item]{Bisher nur feedforward NN}
-\note[item]{Hierbei Reihenfolge von Bedeutung}
+\note[item]{Bisher nur feedforward NN
+\begin{itemize}
+    \item Eingangssignale ohne Bezug auf vorherige Durchläufe
+\end{itemize}}
+
+\note[item]{Hierbei Reihenfolge von Bedeutung
+\begin{itemize}
+    \item RNNs bekommen sowohl Eingagssignale durch den Trainingsdatensatz als auch durch Rückkopplungen während der Ausführung
+\end{itemize}}
+
+\note[item]{Viele Anwendungsbereiche
+\begin{itemize}
+    \item besonders gut um Muster zu erkennen bzw. zu Ergänzen
+    \item aber auch in der Sprachanalyse sehr wichtig
+\end{itemize}}
 
 \end{frame}
